--- a/view/package.json
+++ b/view/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
+    "bootstrap": "^4.3.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-jsonschema-form": "^1.7.0",
     "react-redux": "^7.1.0",
+    "react-responsive-carousel": "^3.1.49",
     "react-scripts": "3.0.1",
     "underscore": "^1.9.1"
   },
